[gd_scene load_steps=4 format=2]

[ext_resource path="res://TebengeLoneLoader.gd" type="Script" id=1]
[ext_resource path="res://GameDVDCardtridge/Tebenge/Tebenge.tscn" type="PackedScene" id=2]
[ext_resource path="res://GameDVDCardtridge/Tebenge/SpareParts/BuiltInSystemer.tscn" type="PackedScene" id=3]

[node name="TebengeLoneLoader" type="Node"]
script = ExtResource( 1 )

[node name="DVDsolder" type="Node" parent="."]

[node name="Tebenge" parent="DVDsolder" instance=ExtResource( 2 )]

[node name="BuiltInSystemer" parent="." instance=ExtResource( 3 )]

[connection signal="AdInterstitial_Exec" from="DVDsolder/Tebenge" to="." method="_on_Tebenge_AdInterstitial_Exec"]
[connection signal="AdRewarded_Exec" from="DVDsolder/Tebenge" to="." method="_on_Tebenge_AdRewarded_Exec"]
[connection signal="ChangeDVD_Exec" from="DVDsolder/Tebenge" to="." method="_on_Tebenge_ChangeDVD_Exec"]
[connection signal="Shutdown_Exec" from="DVDsolder/Tebenge" to="." method="_on_Tebenge_Shutdown_Exec"]

[editable path="BuiltInSystemer"]
